# webscraper

./: Readme.md
freerider/: arguments.py  main.py
freerider-scrapper/: pyproject.toml  setup.py
freerider-scrapper/freerider/: arguments.py  freerider.py  frider.py
freerider-scrapper/freerider/plugins/: hertz.py
freerider-scrapper/freerider/plugins/hertz/: hertz.py
freerider/hertz/: hertz.py
hertz/: main.py
